force-app/main/default/objects/IntegratedLog__c/IntegratedLog__c.object-meta.xml
<CustomObject>
    <label>集成日志</label>
    <nameField>
        <displayFormat>IL{yyyy}{mm}{dd}{000000}</displayFormat>
        <label>集成日志名称</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>