force-app/main/default/objects/IntegratedLog__c/fields/ErrorContent__c.field-meta.xml
<CustomField>
    <fullName>ErrorContent__c</fullName>
    <label>报错内容</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>