force-app/main/default/objects/IntegratedLog__c/fields/ExecuteLog__c.field-meta.xml
<CustomField>
    <fullName>ExecuteLog__c</fullName>
    <label>处理类日志记录</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>