force-app/main/default/objects/IntegratedLog__c/fields/GeneratedTime__c.field-meta.xml
<CustomField>
    <fullName>GeneratedTime__c</fullName>
    <label>生成时间</label>
    <type>DateTime</type>
</CustomField>