force-app/main/default/objects/IntegratedLog__c/fields/HasIntegratedExecute__c.field-meta.xml
<CustomField>
    <fullName>HasIntegratedExecute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>首次重试计划</label>
    <type>Checkbox</type>
</CustomField>