force-app/main/default/objects/IntegratedLog__c/fields/HeaderContent__c.field-meta.xml
<CustomField>
    <fullName>HeaderContent__c</fullName>
    <label>接口头信息</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>