force-app/main/default/objects/IntegratedLog__c/fields/IntegratedExecute__c.field-meta.xml
<CustomField>
    <fullName>IntegratedExecute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>集成调用【重试】</label>
    <referenceTo>IntegratedExecute__c</referenceTo>
    <relationshipLabel>集成日志</relationshipLabel>
    <relationshipName>IntegratedExecute</relationshipName>
    <type>Lookup</type>
</CustomField>