force-app/main/default/objects/IntegratedLog__c/fields/InterfaceSendContent__c.field-meta.xml
<CustomField>
    <fullName>InterfaceSendContent__c</fullName>
    <label>*接口发送内容</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>