force-app/main/default/objects/IntegratedLog__c/fields/InvokeSession__c.field-meta.xml
<CustomField>
    <fullName>InvokeSession__c</fullName>
    <label>调用会话</label>
    <length>255</length>
    <type>Text</type>
</CustomField>