force-app/main/default/objects/IntegratedLog__c/fields/InvokeUser__c.field-meta.xml
<CustomField>
    <fullName>InvokeUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>调用人</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InvokeUserFUser</relationshipName>
    <type>Lookup</type>
</CustomField>