force-app/main/default/objects/IntegratedLog__c/fields/IsAfter__c.field-meta.xml
<CustomField>
    <fullName>IsAfter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>*IsAfter</label>
    <type>Checkbox</type>
</CustomField>