force-app/main/default/objects/IntegratedLog__c/fields/IsBefore__c.field-meta.xml
<CustomField>
    <fullName>IsBefore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>*IsBefore</label>
    <type>Checkbox</type>
</CustomField>