force-app/main/default/objects/IntegratedLog__c/fields/IsCallDuplicate__c.field-meta.xml
<CustomField>
    <fullName>IsCallDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>*是否重复执行</label>
    <type>Checkbox</type>
</CustomField>