force-app/main/default/objects/IntegratedLog__c/fields/LogExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>LogExpiryDate__c</fullName>
    <label>日志到期时间</label>
    <type>Date</type>
</CustomField>