force-app/main/default/objects/IntegratedLog__c/fields/MSGID__c.field-meta.xml
<CustomField>
    <fullName>MSGID__c</fullName>
    <label>请求唯一ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>