force-app/main/default/objects/IntegratedLog__c/fields/OtherPartCall__c.field-meta.xml
<CustomField>
    <fullName>OtherPartCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>*其他接口调用</label>
    <type>Checkbox</type>
</CustomField>