force-app/main/default/objects/IntegratedLog__c/fields/OutboundDefineName__c.field-meta.xml
<CustomField>
    <fullName>OutboundDefineName__c</fullName>
    <label>*调外部接口定义</label>
    <length>255</length>
    <type>Text</type>
</CustomField>