force-app/main/default/objects/IntegratedLog__c/fields/ReqBodyBeforeDecrypt__c.field-meta.xml
<CustomField>
    <fullName>ReqBodyBeforeDecrypt__c</fullName>
    <label>密文请求内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>