force-app/main/default/objects/IntegratedLog__c/fields/RespBodyAfterEncrypt__c.field-meta.xml
<CustomField>
    <fullName>RespBodyAfterEncrypt__c</fullName>
    <label>密文响应内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>