force-app/main/default/objects/IntegratedLog__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <label>结果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>成功</fullName>
            </value>
            <value>
                <fullName>失败</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>