force-app/main/default/objects/IntegratedLog__c/fields/ReturnsContent__c.field-meta.xml
<CustomField>
    <fullName>ReturnsContent__c</fullName>
    <label>返回内容</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>