force-app/main/default/objects/IntegratedLog__c/fields/seqnumToOrderId__c.field-meta.xml
<CustomField>
    <fullName>seqnumToOrderId__c</fullName>
    <label>*seqnumToOrderId</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>