force-app/main/default/objects/IntegratedLog__c/fields/SOUSYS__c.field-meta.xml
<CustomField>
    <fullName>SOUSYS__c</fullName>
    <label>原系统</label>
    <length>255</length>
    <type>Text</type>
</CustomField>