force-app/main/default/objects/IntegratedLog__c/fields/SystemName__c.field-meta.xml
<CustomField>
    <fullName>SystemName__c</fullName>
    <label>对接系统名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>