force-app/main/default/objects/IntegratedLog__c/fields/TARSYS__c.field-meta.xml
<CustomField>
    <fullName>TARSYS__c</fullName>
    <label>目标系统</label>
    <length>255</length>
    <type>Text</type>
</CustomField>