force-app/main/default/objects/IntegratedLog__c/fields/TheFatherLog__c.field-meta.xml
<CustomField>
    <fullName>TheFatherLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>*父级集成日志</label>
    <referenceTo>IntegratedLog__c</referenceTo>
    <relationshipLabel>集成日志</relationshipLabel>
    <relationshipName>IntegratedLogFIntegratedLog</relationshipName>
    <type>Lookup</type>
</CustomField>