force-app/main/default/objects/IntegratedLog__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>类型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>出站</fullName>
            </value>
            <value>
                <fullName>入站</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>