force-app/main/default/objects/IntegratedLog__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>接口URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>