force-app/main/default/objects/IntegratedLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InterfaceName__c</columns>
    <columns>Type__c</columns>
    <columns>Results__c</columns>
    <columns>GeneratedTime__c</columns>
    <columns>SendContent__c</columns>
    <columns>ReturnsContent__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>IP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GeneratedTime__c</field>
        <operation>greaterThan</operation>
        <value>5/7/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>GeneratedTime__c</field>
        <operation>lessThan</operation>
        <value>5/9/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>InterfaceName__c</field>
        <operation>contains</operation>
        <value>U8</value>
    </filters>
    <label>全部</label>
</ListView>