force-app/main/default/objects/IntegratedLog__c/listViews/CT.listView-meta.xml
<ListView>
    <fullName>CT</fullName>
    <columns>NAME</columns>
    <columns>InterfaceName__c</columns>
    <columns>Type__c</columns>
    <columns>Results__c</columns>
    <columns>GeneratedTime__c</columns>
    <columns>SendContent__c</columns>
    <columns>ReturnsContent__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>IP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>入站</value>
    </filters>
    <filters>
        <field>GeneratedTime__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>今天的入站</label>
</ListView>