force-app/main/default/objects/IntegratedLog__c/listViews/SF_NPS.listView-meta.xml
<ListView>
    <fullName>SF_NPS</fullName>
    <columns>NAME</columns>
    <columns>InterfaceName__c</columns>
    <columns>Results__c</columns>
    <columns>GeneratedTime__c</columns>
    <columns>SendContent__c</columns>
    <columns>ReturnsContent__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>IP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SystemName__c</field>
        <operation>equals</operation>
        <value>德国SF</value>
    </filters>
    <filters>
        <field>GeneratedTime__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>德国SF接口</label>
</ListView>