force-app/main/default/objects/IntegratedLog__c/listViews/TrainingApplyInfo.listView-meta.xml
<ListView>
    <fullName>TrainingApplyInfo</fullName>
    <columns>NAME</columns>
    <columns>InterfaceName__c</columns>
    <columns>Type__c</columns>
    <columns>Results__c</columns>
    <columns>GeneratedTime__c</columns>
    <columns>SendContent__c</columns>
    <columns>ReturnsContent__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>IP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterfaceName__c</field>
        <operation>equals</operation>
        <value>(OA)培训申请信息同步接口</value>
    </filters>
    <label>08 (OA)培训申请信息同步接口</label>
</ListView>