force-app/main/default/objects/IntegratedLog__c/listViews/U8SellInSalesOrder.listView-meta.xml
<ListView>
    <fullName>U8SellInSalesOrder</fullName>
    <columns>NAME</columns>
    <columns>InterfaceName__c</columns>
    <columns>Results__c</columns>
    <columns>GeneratedTime__c</columns>
    <columns>SendContent__c</columns>
    <columns>ReturnsContent__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>IP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterfaceName__c</field>
        <operation>equals</operation>
        <value>(U8_SellIn)销售订单信息同步接口</value>
    </filters>
    <filters>
        <field>Results__c</field>
        <operation>equals</operation>
        <value>失败</value>
    </filters>
    <label>02 (U8_SellIn)销售订单信息同步接口</label>
</ListView>