force-app/main/default/objects/IntegratedLog__c/listViews/X05_VTSEquipmentOrder.listView-meta.xml
<ListView>
    <fullName>X05_VTSEquipmentOrder</fullName>
    <columns>NAME</columns>
    <columns>InterfaceName__c</columns>
    <columns>Results__c</columns>
    <columns>GeneratedTime__c</columns>
    <columns>SendContent__c</columns>
    <columns>ReturnsContent__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>IP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterfaceName__c</field>
        <operation>equals</operation>
        <value>(VTS)安装维修工单信息同步接口</value>
    </filters>
    <filters>
        <field>Results__c</field>
        <operation>equals</operation>
        <value>失败</value>
    </filters>
    <label>05 (VTS)安装维修工单信息同步接口</label>
</ListView>